--- a/src/App.css
+++ b/src/App.css
@@ -67,15 +67,41 @@ h1 {
   box-shadow: #156fff 0px -2px inset;
 }
 
-.trivia-container {
+.trivia-container,
+.choose-container {
   margin: 2rem 4rem;
 }
 
-.trivia-container h1 {
+.trivia-container h1,
+.choose-container h1 {
   text-align: center;
   font-size: 3rem;
   color: white;
   font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.choose-container div {
+  display: flex;
+  flex-wrap: nowrap;
+  margin-top: 2rem;
+}
+
+.trivia-list {
+  flex: 0 0 calc(20% - 10px);
+  margin: 0 2rem 0 0;
+  box-sizing: border-box;
+  padding: 20px; /* Optional: For spacing inside the items */
+  justify-content: center;
+  font-size: 20px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-weight: 600;
+  background-color: rgb(48, 205, 245);
+  border-radius: 20px;
+}
+
+.trivia-list a {
+  color: #1123c5;
+  text-decoration: none;
 }
 
 .quiz-form {
@@ -177,3 +203,202 @@ textarea {
 .correct-ans-div div {
   flex: 1;
 }
+
+.submit-btn {
+  background-color: #ffcc22;
+  margin: 1rem 2rem 1rem 0;
+  color: white;
+  font-size: 1.25rem;
+  padding: 6px;
+  width: 100px;
+  border: none;
+  cursor: pointer;
+}
+
+.back-btn {
+  position: absolute;
+  background-color: rgb(17, 202, 17);
+  border-radius: 20%;
+  padding: 8px;
+  text-decoration: none;
+  color: white;
+  top: 20px;
+  font-size: 1.5rem;
+}
+
+/* Quiz Page CSS Start */
+
+.quiz-cointainer {
+  margin: 3rem 5rem;
+}
+
+.join-title,
+.question-title,
+.scoreboard-title,
+.quiz-end-title {
+  text-align: center;
+}
+
+.name-input {
+  text-align: center;
+  width: 400px;
+  height: 50px;
+  padding: 4px 6px;
+  font-size: 20px;
+}
+
+.join-quiz-container,
+.quiz-start-contianer,
+.show-scoreboard-container,
+.quiz-end-container {
+  margin: 6rem 2rem 2rem 8rem;
+}
+
+.join-quiz-container button,
+.quiz-start-contianer button {
+  margin: 0 0 0 4rem;
+  width: 150px;
+  height: 50px;
+  padding: 4px 6px;
+  font-size: 20px;
+}
+
+.join-quiz-container button {
+  border-radius: 20px;
+  background: linear-gradient(
+    90deg,
+    rgba(149, 77, 200, 1) 0%,
+    rgba(114, 77, 200, 1) 67%,
+    rgba(137, 77, 200, 1) 91%
+  );
+  color: white;
+  border: 0.2px solid black;
+  cursor: pointer;
+}
+
+.player-list {
+  display: flex;
+  flex-wrap: wrap;
+  /* justify-content: space-between; */
+}
+
+.player-names {
+  flex: 0 0 calc(20% - 10px);
+  margin: 5px;
+  box-sizing: border-box;
+  background-color: #f0f0f0; /* Optional: For visual distinction */
+  padding: 20px; /* Optional: For spacing inside the items */
+  text-align: center;
+}
+.question-statement {
+  margin: 2rem 0 2rem 0;
+  font-size: 24px;
+  font-weight: 600;
+  background-color: #f0f0f0;
+  color: black;
+  padding: 20px;
+}
+
+.timer,
+.countdown-question {
+  color: #f0f0f0;
+  font-size: 24px;
+  margin-bottom: 2rem;
+}
+
+.quiz-end-title {
+  margin-bottom: 2rem;
+}
+
+.player-scorecard li {
+  margin-top: 0.6rem;
+  list-style: none;
+  font-size: 18px;
+  /* background: #19cabb; */
+  color: white;
+  font-weight: 500;
+  padding: 20px;
+  border-radius: 20px;
+  text-align: center;
+}
+.player-scorecard li:first-child {
+  color: gold;
+}
+
+.player-scorecard li:nth-child(2) {
+  color: silver;
+}
+
+.player-scorecard li:nth-child(3) {
+  color: #cd7f32;
+}
+
+.medal {
+  margin-right: 1rem;
+  width: 50px;
+  height: 50px;
+  vertical-align: middle;
+}
+
+.ranking {
+  display: inline-block;
+  width: 50px;
+  margin-right: 1rem;
+  text-align: center;
+  font-size: 24px;
+}
+
+/* Quiz Page CSS End */
+
+/* For phones css */
+
+@media only screen and (max-width: 600px) {
+  h1,
+  .join-title,
+  .question-title,
+  .scoreboard-title,
+  .quiz-end-title {
+    font-size: 24px;
+  }
+  .component,
+  .choose-container,
+  .join-quiz-container,
+  .quiz-start-contianer,
+  .show-scoreboard-container,
+  .quiz-end-containerr {
+    margin: 3rem 1rem 3rem 1rem;
+  }
+  .choice {
+    margin: 4rem 1rem;
+    flex-wrap: wrap;
+  }
+
+  .create-btn,
+  .choose-btn {
+    width: 300px;
+    height: 100px;
+    flex: 1 1 100%;
+  }
+
+  .name-input {
+    text-align: center;
+    width: 200px;
+    height: 50px;
+    padding: 4px 6px;
+    font-size: 20px;
+  }
+
+  .join-quiz-container button,
+  .quiz-start-contianer button {
+    margin: 2rem 0 0 2rem;
+    width: 150px;
+    height: 50px;
+    padding: 4px 6px;
+    font-size: 20px;
+  }
+  .player-list {
+    margin-top: 1.25rem;
+  }
+}
+
+/* End for phones css */
